- Fixed bug #50209 (Compiling with libedit cannot find readline.h)   (patch by tcallawa at redhat dot com)